# openflipbook

./: .env.example  .gitignore  GEOMETRIC_WORLD_AUDIT.md  Makefile  README.md  docker-compose.demo.yml  docker-compose.local.yml  docker-compose.yml  knip.json  package.json  pnpm-lock.yaml
apps/modal-backend/: .env.example  .venv  _env.py  generate.py  local_server.py  ltx_stream.py  obs.py  pyproject.toml  requirements-dev.txt  requirements.txt
apps/modal-backend/providers/: _common.py  breaker.py  detector.py  edit_loop.py  geometry.py  geometry_checks.py  geometry_prompt.py  grounding.py  heights.py  image.py  image_edit.py  inpaint.py  judge.py  layout_solver.py  llm.py  mock.py  model_router.py  moderation.py  pixel_diff.py  ratelimit.py  render_loop.py  segmenter.py  spend.py  video.py  view_estimator.py
apps/modal-backend/providers/generate_modes/: __init__.py  ascend.py  edit.py  expand.py  tap.py
apps/modal-backend/providers/llm/: __init__.py  click.py  client.py  extraction.py  planner.py  world.py
apps/modal-backend/providers/prompt_library/: __init__.py  camera.py  feedback.py  instructions.py  layout.py  policy.py  style.py  types.py
apps/modal-backend/scripts/: fetch_corpus.py  verify-fal-models.py
apps/modal-backend/tests/: _baseline.py  conftest.py  eval_baselines.json  ladder_judge.py  test_click_bench.py  test_click_resolution.py  test_common_fal_url.py  test_continuity_bench.py  test_deploy_safety.py  test_detector.py  test_edit_entities.py  test_edit_loop.py  test_env_flag.py  test_eval_baselines.py  test_friendly_errors.py  test_generate_ascend.py  test_generate_edit_judge.py  test_generate_edit_region.py  test_generate_enter.py  test_generate_expand.py  test_generate_geometry.py  test_generate_spend.py  test_generate_view.py  test_geo_schema.py  test_geometry_checks.py  test_geometry_prompt.py  test_grounding_diff.py  test_heights.py  test_image_continue.py  test_image_edit_provider.py  test_image_provider.py  test_inpaint_provider.py  test_judge_place_match.py  test_label_free_prompts.py  test_label_match.py  test_llm_provider.py  test_llm_retry.py  test_local_server.py  test_ltxf.py  test_map_corpus.py  (+19 more)
apps/modal-backend/tests/click_bench/: README.md  __init__.py  _annotate.py  _gen_synthetic.py  _score.py  leaderboard.py  runner.py
apps/modal-backend/tests/continuity_bench/: __init__.py  _replay.py  _score.py  coherence_runner.py  enter_runner.py  outward_runner.py  runner.py  style_runner.py  (+6 more)
(+426 files in other folders)
